components/style.scss
@import "~theme/variables.scss";

:global(.Page) {
  padding: 0;
}

:global(.Header) {
  background: $header-bg;
  padding: 15px 0;
}

:global(.Logo) {
  background-image: $logo-small;
  background-repeat: no-repeat;
  background-size: contain;
  height: 50px;

  &:global(.Logo--small) {
    height: 30px;
    min-width: 200px;
  }

  &:global(.Logo--large) {
    height: 70px;
    min-width: 240px;
  }

}

:global(.NavButton) {
  background: transparent;
  border: none;
  color: $nav-color;
  padding: 10px;
  cursor: pointer;
  fill: $nav-color;

  &:global(:hover) {
    color: lighten($nav-color, 10%);
    fill: lighten($nav-color, 10%);
  }

  &:global(.NavButton--active) {
    color: $nav-active-color;
    fill: $nav-active-color;
  }
}



:global(.Content) {
  background: $content-bg;
  color: $content-color;

  :global(.Content__header) {
    background: $content-header-bg;
    color: $content-header-color;
    border-bottom: 1px solid darken($content-header-bg, 10%);
    height: 54px;
  }

  :global(.Content__headerCenter) {
    display: flex;
    flex-direction: row;
    align-items: center;

    :global(.Content__title) {
      flex: 1;
    }
  }

  :global(.Content__button) {
    margin: 10px 0 10px 10px;
  }

  :global(.Content__body) {
    padding-top: 20px;
  }
}

:global(.Button) {
  border-radius: $border-radius;
  display: flex;
  flex-direction: row;
  align-items: center;
  background: $brand-grey;
  border: 1px solid $brand-grey;
  cursor: pointer;
  color: $text-color;
  fill: currentColor;
  font-size: 14px;

  &:global(.Button--primary) {
    background: $brand-primary;
    border: 1px solid $brand-primary;
    color: white;
  }

  &:global(.Button--hollow) {
    background: transparent;
  }
}

